# glow

./: .gitignore  AGENTS.md  README.md  emulator_config.json  pyproject.toml
docs/: architecture.md  deployment.md  mqtt.md  threading.md
glow/: __init__.py  controller.py  main.py
glow/display/: __init__.py  base.py  config.py  factory.py
glow/display/backends/: __init__.py  emulator.py  piomatter.py  rgbmatrix.py
glow/gcal/: __init__.py  client.py
glow/spotify/: __init__.py  client.py
glow/visualizations/: __init__.py  arkanoid.py  calendar.py  conway.py  fire.py  matrix.py  news.py  plasma.py  spotify.py  text.py  utils.py
specs/: controller.md  display.md  visualizations.md
specs/visualizations/: arkanoid.md  calendar.md  conway.md  fire.md  matrix.md  news.md  plasma.md  spotify.md  text.md
system/: glow-controller.service  install.sh
